<resources>
    <string name="app_name">The Movie DB</string>

    <string name="fab_content_desc">Open about page</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="about">About Developer</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_storyline">Storyline</string>
    <string name="home_fragment_title">Select Genre</string>
    <string name="movie_list_fragment_title">%1$s Movies</string>
    <string name="movie_thumbnail">Movie thumbnail</string>
    <string name="storyline">Storyline</string>
    <string name="developer_avatar">Developer Avatar</string>
    <string name="developer_name">Baharudin Yusup</string>
    <string name="developer_email">hi@baharudin.dev</string>

    <string name="share">Share</string>
    <string name="share_button">Share Button</string>
    <string name="year">Year</string>
    <string name="title">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Retry</string>
    <string name="please_try_again">Oops! please try again!</string>

    <string name="rating">%1$.1f / 10</string>

    <string name="info">Info</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">No reviews</string>
    <string name="read_more">Read more...</string>
</resources>