<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uis.detail.MovieDetailActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/root_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:viewBindingIgnore="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/root_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/img_movie_thumbnail"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/movie_thumbnail"
                    android:layout_marginEnd="8dp"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="8dp"
                        >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="4dp"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_movie_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@tools:sample/full_names"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="8dp"
                        >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/year"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="4dp"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_movie_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@tools:sample/date/ddmmyy"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="4dp"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_movie_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="9.0/10"
                            />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:text="@string/storyline"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_storyline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                tools:text="@tools:sample/lorem/random" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>